test/part2/fail/typage_pointer1-10.c
struct test{
	int x;
}

int main(){
	
	int *i;
	struct test *t;

	i = t;

}
